<resources>
    <string name="app_name">HealthCarer-homepage</string>
    <string name="tab_text_1">My Body</string>
    <string name="tab_text_2">My Profile</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_3">My Patients</string>
    <string name="welcome">welcome</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="userid">UserID</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="role">Role</string>
    <string name="noError"> </string>
    <string name="Fail">Please finish all required fields.</string>
    <string name="addproblem">AddProblem</string>

    <string-array name="memberTypes">
        <item>"Patient"</item>
        <item>"CareProvider"</item>
    </string-array>

</resources>
