<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Signup">

    <TextView
        android:id="@+id/textView_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textView_warning"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_SignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/noError"
        android:textColor="#d73232" />




    <EditText
        android:id="@+id/Name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/Type"
        android:layout_marginTop="150dp"
        android:background="#fff"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingLeft="3dp"
        android:layout_alignLeft="@+id/Type"
        android:autofillHints=""
        android:paddingStart="3dp" />

    <EditText
        android:id="@+id/UserId"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/Name"
        android:layout_alignLeft="@+id/Name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:background="#fff"
        android:ems="10"
        android:hint="@string/userid"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword"
        android:paddingLeft="3dp" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/Name"
        android:layout_alignLeft="@+id/Name"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="250dp"
        android:background="#fff"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingLeft="3dp" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/Name"
        android:layout_alignLeft="@+id/Name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"

        android:background="#fff"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingLeft="3dp"
        android:autofillHints="" tools:targetApi="o"/>

    <TextView
        android:id="@+id/Role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView_SignUp"
        android:layout_marginStart="18dp"
        android:text="@string/role"
        android:textSize="28sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="18dp" />

    <Spinner
        android:id="@+id/Type"
        android:layout_width="300dp"
        android:layout_height="40dp"

        android:layout_alignParentStart="true"
        android:layout_below="@+id/Role"
        android:layout_marginStart="22dp"
        android:background="#fff"
        android:paddingLeft="3dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="22dp"
        android:paddingStart="3dp" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp"
        android:background="@color/colorAccent"
        android:text="@string/save"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_alignParentLeft="true" />

</RelativeLayout>